--- a/options/options.html
+++ b/options/options.html
@@ -3,26 +3,12 @@
 <head>
   <title>My Test Extension Options</title>
   <link href="../libs/jquery-ui-1.12.1.custom/jquery-ui.min.css" rel="stylesheet">
+  <link href="../libs/jquery-ui-1.12.1.custom/jquery-ui.theme.min.css" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="options.css" media="all">
 </head>
 
 <body>
-  <div class="groups">
-    <div class="group ui-state-default">
-      <span class="ui-icon ui-icon-arrow-4"></span>
-      <div class="content">
-        <input type="text" placeholder="Input group name">
-        <textarea id="reviewers" rows="2" placeholder="Input a list of reviewers in csv format, e.g.: bgates, sjobs, jsmith, aivanov"></textarea>
-      </div>
-    </div>
-    <div class="group ui-state-default">
-      <span class="ui-icon ui-icon-arrow-4"></span>
-      <div class="content">
-        <input type="text" placeholder="Group name">
-        <textarea id="reviewers" rows="2" placeholder="List of reviewers in csv format, e.g.: bgates, sjobs, jsmith, aivanov"></textarea>
-      </div>
-    </div>
-  </div>
+  <div class="groups"></div>
 
   <div class="add-group-wrapper">
     <a id="add-group"><span class="ui-icon ui-icon-plus"></span>Add group</a>
