Add ability to add PR description templates

--- a/options/options.html
+++ b/options/options.html
@@ -8,14 +8,23 @@
 </head>
 
 <body>
-  <div class="groups"></div>
+  <h2>PR description templates</h2>
+  <div class="templates">
+  </div>
+
+  <div class="add-template-wrapper">
+    <a id="add-template"><span class="ui-icon ui-icon-plus"></span>Add PR template</a>
+  </div>
+
+  <h2>PR reviewers groups</h2>
+  <div class="groups">
+  </div>
 
   <div class="add-group-wrapper">
-    <a id="add-group"><span class="ui-icon ui-icon-plus"></span>Add group</a>
+    <a id="add-group"><span class="ui-icon ui-icon-plus"></span>Add reviewers group</a>
   </div>
 
   <div class="actions-wrapper">
-    <div id="status"></div>
     <button id="save">Save</button>
     <a id="cancel">Cancel</a>
   </div>
