Rewrite options.js on ES6

--- a/options/options.html
+++ b/options/options.html
@@ -9,22 +9,22 @@
 
 <body>
   <h2>PR description templates</h2>
-  <div class="templates">
+  <div class="descriptions">
   </div>
 
-  <div class="add-template-wrapper">
-    <a id="add-template"><span class="ui-icon ui-icon-plus"></span>Add PR template</a>
+  <div class="entity-actions description-actions">
+    <a id="add-description"><span class="ui-icon ui-icon-plus"></span>Add PR description</a>
   </div>
 
   <h2>PR reviewers groups</h2>
-  <div class="groups">
+  <div class="reviewers">
   </div>
 
-  <div class="add-group-wrapper">
-    <a id="add-group"><span class="ui-icon ui-icon-plus"></span>Add reviewers group</a>
+  <div class="entity-actions reviewers-actions">
+    <a id="add-reviewers"><span class="ui-icon ui-icon-plus"></span>Add PR reviewers</a>
   </div>
 
-  <div class="actions-wrapper">
+  <div class="settings-actions">
     <button id="save">Save</button>
     <a id="cancel">Cancel</a>
   </div>
