Move inline styles to spreadsheet, adjust descriptions

--- a/options/options.html
+++ b/options/options.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Test Extension Options</title>
+  <title>PR helper chrome extension</title>
   <link href="../libs/jquery-ui-1.12.1.custom/jquery-ui.min.css" rel="stylesheet">
   <link href="../libs/jquery-ui-1.12.1.custom/jquery-ui.theme.min.css" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="options.css" media="all">
 </head>
 
 <body>
-  <h2>PR description templates</h2>
+  <h2>PR description</h2>
   <div class="descriptions">
   </div>
 
@@ -16,7 +16,7 @@
     <a id="add-description"><span class="ui-icon ui-icon-plus"></span>Add PR description</a>
   </div>
 
-  <h2>PR reviewers groups</h2>
+  <h2>PR reviewers</h2>
   <div class="reviewers">
   </div>
 
